syntax = "proto3";
package meal_provider;

import "google/protobuf/timestamp.proto";

import "common.proto";

option go_package = "gitlab.winfra.cs.nycu.edu.tw/112-cn/meal-provider-back-end/proto/gen/billing;billing";

// ID of a Bill object.
message BillID {
  string id = 1;
}

// A Bill object exposed in APIs.
message Bill {
  BillID id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;

  string user_id = 4;
  string order_id = 5;
  int32 amount = 6;
}

// ID of a Payment object.
message PaymentID {
  string id = 1;
}

// A Payment object exposed in APIs.
message Payment {
  PaymentID id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;

  string user_id = 4;
  int32 amount = 5;
}

// A object with info to create bill.
message CreateBillInput {
  string user_id = 1;
  string order_id = 2;
  int32 amount = 3;
}

// ==========
// CreateBill

message CreateBillRequest {
  CreateBillInput input = 1;
}

message CreateBillResponse {
  Bill created_bill = 1;
}

// A object with info to create payment.
message CreatePaymentInput {
  string user_id = 1;
  int32 amount = 2;
}

// =============
// CreatePayment

message CreatePaymentRequest {
  CreatePaymentInput input = 1;
}

message CreatePaymentResponse {
  Payment created_payment = 1;
}

// =======
// GetBill

message GetBillRequest {
  BillID id = 1;
}

message GetBillResponse {
  optional Bill bill = 1;
}

// Parameters for querying bills.
message QueryBillParams {
  optional string user_id = 1;
  optional string order_id = 2;
}

// ========
// GetBills

message GetBillsRequest {
  QueryBillParams query_params = 1;
}

message GetBillsResponse {
  repeated Bill bills = 1;
}

// ==========
// GetPayment

message GetPaymentRequest {
  PaymentID id = 1;
}

message GetPaymentResponse {
  optional Payment payment = 1;
}

// Parameters for querying payments.
message QueryPaymentParams {
  optional string user_id = 1;
}

// ===========
// GetPayments

message GetPaymentsRequest {
  QueryPaymentParams query_params = 1;
}

message GetPaymentsResponse {
  repeated Payment payments = 1;
}

service BillingService {
  rpc CreateBill(CreateBillRequest) returns (CreateBillResponse);
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);

  rpc GetBill(GetBillRequest) returns (GetBillResponse);
  rpc GetBills(GetBillsRequest) returns (GetBillsResponse);

  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc GetPayments(GetPaymentsRequest) returns (GetPaymentsResponse);
}
